--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -16,11 +16,11 @@
   border: none;
 
   &--checkbox {
-    margin-bottom: 39px;
+    margin-bottom: 37px;
   }
 
   &--name {
-    margin-bottom: 29px;
+    margin-bottom: 30px;
   }
 
   &--tel {
@@ -28,7 +28,7 @@
   }
 
   &--email {
-    margin-bottom: 30px;
+    margin-bottom: 31px;
   }
 
   &--comment {
@@ -84,8 +84,7 @@
 
 .order-form__fields-item {
   padding-left: 61px;
-  padding-right: 72px;
-  margin-bottom: 21px;
+  margin-bottom: 26px;
   text-align: left;
 
   &:last-child {
@@ -97,14 +96,14 @@
   }
 
   &--color {
-    margin-bottom: 41px;
+    margin-bottom: 44px;
   }
 }
 
 .order-form__input--radio + label::before {
   content: "";
   position: absolute;
-  top: -4px;
+  top: -6px;
   left: -61px;
   width: 38px;
   height: 38px;
@@ -142,7 +141,7 @@
 .order-form__input--checkbox + label::before {
   content: "";
   position: absolute;
-  bottom: -7px;
+  bottom: -9px;
   left: -60px;
   width: 38px;
   height: 38px;
@@ -175,6 +174,9 @@
 
 /*--------------- labels ---------------*/
 .order-form__label {
+  display: block;
+  width: 230px;
+  padding-right: 72px;
   position: relative;
   line-height: 18px;
   word-wrap: break-word;
@@ -182,7 +184,7 @@
 
 .order-form__field-wrapper {
   &--name {
-    margin-bottom: 21px;
+    margin-bottom: 24px;
   }
 
   &--surname {
@@ -360,7 +362,7 @@
 
   .order-form__fields-item {
     padding-left: 80px;
-    margin-bottom: 56px;
+    margin-bottom: 59px;
 
     &--color {
       width: 239px;
@@ -369,16 +371,20 @@
   }
 
   .order-form__label {
+    width: 260px;
     margin-top: 0;
     padding: 0;
     font-size: 19px;
+
+    &--color {
+      width: 135px;
+    }
 
     &--name,
     &--surname,
     &--patronimic {
       width: 123px;
       padding-left: 0;
-      margin-left: 34px;
     }
 
     &--name {
@@ -393,7 +399,7 @@
   }
 
   .order-form__input--radio + label::before {
-    top: -10px;
+    top: -14px;
     left: -79px;
     width: 51px;
     height: 51px;
@@ -407,38 +413,46 @@
   }
 
   .order-form__input--checkbox + label::before {
-    bottom: -15px;
+    bottom: -18px;
     left: -80px;
     width: 54px;
     height: 52px;
   }
 
   .order-form__input--checkbox:checked + label::after {
-    top: -6px;
+    top: -8px;
     left: -63px;
     width: 20px;
     height: 30px;
   }
 
   .order-form__group--name .order-form__input {
-    width: 375px;
-    margin-left: 20px;
-    padding-left: 18px;
+    flex-grow: 1;
+    padding-left: 19px;
     font-size: 19px;
     line-height: 20px;
 
     &--name {
-      width: 428px;
-      margin-left: 18px;
-      padding-left: 17px;
+
+      //width: 428px;
+      //margin-left: 18px;
+      //padding-left: 17px;
     }
   }
 
   .order-form__field-wrapper {
-    width: 100%;
+    width: 500px;
+
+    &--name,
+    &--surname,
+    &--patronymic {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+    }
 
     &--name {
-      margin-bottom: 26px;
+      margin-bottom: 23px;
     }
   }
 
@@ -565,12 +579,6 @@
       padding-left: 89px;
       margin-top: 0;
     }
-
-    &--name,
-    &--surname,
-    &--patronimic {
-      margin-left: 26px;
-    }
   }
 
   .order-form__fields-list--type {
@@ -601,14 +609,17 @@
     left: 25px;
   }
 
-  .order-form__group--name .order-form__input {
-    width: 573px;
-    margin-left: 20px;
-    padding-left: 16px;
+  .order-form__field-wrapper {
+    width: 700px;
+    margin-left: 5px;
 
     &--name {
-      width: 625px;
+      margin-left: 7px;
     }
+  }
+
+  .order-form__group--name .order-form__input {
+    padding-left: 16px;
   }
 
   .order-form__input--tel,
@@ -633,10 +644,11 @@
 
   .order-form__order-btn {
     margin-left: 225px;
-    margin-bottom: 49px;
+    margin-bottom: 50px;
   }
 
   .order-form__required-fields {
     margin-right: 175px;
+    padding-top: 11px;
   }
 }
