--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -18,6 +18,7 @@
 }
 
 .reviews__title {
+  width: 100%;
   margin: 0;
   padding: 0 30px;
   font-size: 25px;
